--- a/.github/ISSUE_TEMPLATE/question_and_support.yml
+++ b/.github/ISSUE_TEMPLATE/question_and_support.yml
@@ -28,7 +28,7 @@ body:
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [CODE OF CONDUCT](https://github.com/developer-student-clubs/DU-Hacks-Mobile-App/blob/main/.github/ISSUE_TEMPLATE/CODE_OF_CONDUCT.md)
+      description: By submitting this issue, you agree to follow our [CODE OF CONDUCT](https://github.com/developer-student-clubs/DU-Hacks-Mobile-App/blob/main/.github/CODE_OF_CONDUCT.md)
       options:
-        - label: I follow [CONTRIBUTING GUIDELINE](https://github.com/developer-student-clubs/DU-Hacks-Mobile-App/blob/main/.github/ISSUE_TEMPLATE/CODE_OF_CONDUCT.md) of this project.
+        - label: I follow [CONTRIBUTING GUIDELINE](https://github.com/developer-student-clubs/DU-Hacks-Mobile-App/blob/main/.github/CODE_OF_CONDUCT.md) of this project.
           required: true
