--- a/.github/workflows/pr_comment.yml
+++ b/.github/workflows/pr_comment.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Comment on Opening Pull Request
         uses: wow-actions/auto-comment@v1
         with:
-          # GITHUB_TOKEN : ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GITHUB_TOKEN : ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           pullRequestOpened: |
            @{{ author }}, Thank you for creating PR! We will review it super soon. 😇❣️
            We hope you have followed [CONTRIBUTING GUIDELINES](../blob/master/CONTRIBUTING.md).
@@ -24,7 +24,7 @@ jobs:
       - name : Merging pull Request
         uses : wow-actions/auto-comment@v1
         with : 
-         # GITHUB_TOKEN : ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+         GITHUB_TOKEN : ${{ secrets.PERSONAL_ACCESS_TOKEN }}
          pullRequestMerged: |
             @{{ author }} We're thrilled to inform you that your pull request has been successfully merged !
             Your hard work, dedication, and expertise have made a significant impact on our project, and we couldn't be more grateful for your contributions.😇
@@ -35,7 +35,7 @@ jobs:
       - name : Closing pull Request
         uses : wow-actions/auto-comment@v1
         with : 
-         # GITHUB_TOKEN : ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+         GITHUB_TOKEN : ${{ secrets.PERSONAL_ACCESS_TOKEN }}
          pullRequestClosed: |
             @{{ author }} ,I wanted to reach out and let you know that we have decided to close your pull request.🙇
             While we truly appreciate your effort and dedication in contributing to our project, after careful consideration, we have determined that this particular PR may not align with our current goals or requirements.😢
