--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: Bug Report 🪲
-description: Report your bug by filling the information given below :
+description: Report your bug by filling the information given below 
 title: "[Bug]: "
 
 body:
