--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,17 +67,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Helvetica Neue
+      fonts:
+        - asset: assets/fonts/helvetica_neue/HelveticaNeuBold.ttf
+          weight: 900
+        - asset: assets/fonts/helvetica_neue/HelveticaNeueLight.ttf
+        - asset: assets/fonts/helvetica_neue/HelveticaNeueMedium.ttf 
+          weight: 700
+        - asset: assets/fonts/helvetica_neue/HelveticaNeueThin.ttf
+          weight: 300
+        - asset: assets/fonts/helvetica_neue/HelveticaNeue.ttf
+        - asset: assets/fonts/helvetica_neue/HelveticaNeueIt.ttf
+     
+
+  
+
